--- a/library.properties
+++ b/library.properties
@@ -1,12 +1,11 @@
 {
-  name=vehex
+  name=libDCL
   version=1.0.0
   author=David Liddell <david@liddell.com>
   maintainer=David Liddell <david@liddell.com>
-  sentence=Library to control Victron ve.direct charging devices using the HEX serial protocol
-  papagraph==Library to control Victron ve.direct charging devices using the HEX serial protocol
-  category=Signal Input/Output
-  url=https://github.com/davidcliddell/vehex.git
+  sentence=Library of generally useful functions and classes
+  papagraph=Library of generally useful functions and classes
+  category=General
+  url=https://github.com/davidcliddell/libDCL.git
   architectures=arduino
-  includes=vehex.h
 }
